open localization: update handback repo

--- a/ol-archive/dotnet/docs.ja-jp/master/dotnet-core/contributing.d09c5cb84aedfebcb439768c30f4d13a637536cd.ja-jp.xlf
+++ b/ol-archive/dotnet/docs.ja-jp/master/dotnet-core/contributing.d09c5cb84aedfebcb439768c30f4d13a637536cd.ja-jp.xlf
@@ -2,13 +2,13 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="ja-jp">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-188fee3" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">4d5fa8592ec69d864bd9a5e6dcfde4c2036dd5c4</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-f0362aa" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">98f7ab06ef34efd9759d7b8300893a0a81ad5d7e</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\preview3\contributing.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">c9127822ff7348b4635a6aec15ac7249fe7bd1a9</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">42773058969e2a8bed3f47a412dd5a6488c3e6c2</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">80c60505891850bd8c062806b8a2c305e45f28ec</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">03e7d6d475faf86afa0a59c0b028e8561fc28ad4</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
@@ -16,11 +16,11 @@
           <source>Using the preview3 folder and sub-folders</source>
           <target state="translated">preview3 フォルダーとサブフォルダーの使用</target>       </trans-unit>
         <trans-unit id="102" translate="yes" xml:space="preserve">
-          <source>This folder is the top-level node that matches the tools folder, but contains deltas for the .NET Core tooling Preview 3 release.</source>
-          <target state="translated">このフォルダーは tools フォルダーに対応する最上位ノードですが、.NET Core tooling Preview 3 リリースの差分が含まれます。</target>       </trans-unit>
+          <source>This folder is the top-level node that matches the tools folder, but contains deltas for the .NET Core Tools RC4 release.</source>
+          <target state="translated">このフォルダーは tools フォルダーに対応する最上位ノードですが、.NET Core Tools RC4 リリースの差分が含まれます。</target>       </trans-unit>
         <trans-unit id="103" translate="yes" xml:space="preserve">
-          <source>The goal of this separate parallel folder structure is to provide a location for the Preview 3 release related content that can be relatively easily merged into the main structure when provide version switching in the published site.</source>
-          <target state="translated">このような個別になった並列フォルダー構造の目的は、Preview 3 リリース関連のコンテンツ用の場所を提供し、公開済みのサイトでバージョンを切り替えるときにメイン構造に比較的簡単にマージできるようにすることです。</target>       </trans-unit>
+          <source>The goal of this separate parallel folder structure is to provide a location for the RC4 release related content that can be relatively easily merged into the main structure when provide version switching in the published site.</source>
+          <target state="translated">このような個別になった並列フォルダー構造の目的は、RC4 リリース関連のコンテンツ用の場所を提供し、公開済みのサイトでバージョンを切り替えるときにメイン構造に比較的簡単にマージできるようにすることです。</target>       </trans-unit>
         <trans-unit id="104" translate="yes" xml:space="preserve">
           <source>The content under this node should be a smaller document set that represents the deltas from the Long Term Support (LTS) release and the latest current release.</source>
           <target state="translated">このノードに置くコンテンツは、長期サポート (LTS) リリースおよび現在の最新リリースからの差分を表す小さなドキュメント セットにする必要があります。</target>       </trans-unit>
@@ -37,14 +37,14 @@
           <source>Copy the existing content into a parallel folder under this structure.</source>
           <target state="translated">既存のコンテンツをこの構造下の並列フォルダーにコピーします。</target>       </trans-unit>
         <trans-unit id="109" translate="yes" xml:space="preserve">
-          <source>Make your changes, and add the modified file to the TOC for the Preview 3 release.</source>
-          <target state="translated">変更を行い、変更したファイルを Preview 3 リリースの目次に追加します。</target>       </trans-unit>
+          <source>Make your changes, and add the modified file to the TOC for the RC4 release.</source>
+          <target state="translated">変更を行い、変更したファイルを RC4 リリースの目次に追加します。</target>       </trans-unit>
         <trans-unit id="110" translate="yes" xml:space="preserve">
           <source>New documents</source>
           <target state="translated">新しいドキュメント</target>       </trans-unit>
         <trans-unit id="111" translate="yes" xml:space="preserve">
-          <source>Put the new document in the proper location, and add it to the TOC under the node for the Preview 3 release.</source>
-          <target state="translated">新しいドキュメントを適切な場所に置き、Preview 3 リリースのノード下の目次に追加します。</target>       </trans-unit>
+          <source>Put the new document in the proper location, and add it to the TOC under the node for the RC4 release.</source>
+          <target state="translated">新しいドキュメントを適切な場所に置き、RC4 リリースのノード下の目次に追加します。</target>       </trans-unit>
         <trans-unit id="112" translate="yes" xml:space="preserve">
           <source>All current release files should have the following added near the top of the topic:</source>
           <target state="translated">現在のリリースのすべてのファイルでは、トピックの先頭近くに以下を追加する必要があります。</target>       </trans-unit>
