--- a/ol-archive/dotnet/docs.ja-jp/master/dotnet-core/dotnet-build.d03644e9a880d30faaf538aef62795ad3d7db520.ja-jp.xlf
+++ b/ol-archive/dotnet/docs.ja-jp/master/dotnet-core/dotnet-build.d03644e9a880d30faaf538aef62795ad3d7db520.ja-jp.xlf
@@ -2,13 +2,13 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="ja-jp">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-4a95368" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">d2eeeccd6b3bdf82ba02fea6ce89785ef19d4116</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-f0362aa" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">c2c0ae3711c866268c4e8c066b4213e110e771b9</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\preview3\tools\dotnet-build.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">03585ad2183118ff9f4f521785b243c137680f11</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">b4c6691fd48a6743799dac5eba65e92ccfacbeac</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">1343fbd6efc89e27ef1d5e15cc50c49bc7b3c3f2</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">bf8e11cf89d2c9577be16cabe88802a5f4a667d4</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
@@ -22,11 +22,11 @@
           <source>dotnet-build, CLI, CLI command, .NET Core</source>
           <target state="translated">dotnet-build, CLI, CLI コマンド, .NET Core</target>       </trans-unit>
         <trans-unit id="104" translate="yes" xml:space="preserve">
-          <source>dotnet-build (Tooling Preview 4)</source>
-          <target state="translated">dotnet-build (Tooling Preview 4)</target>       </trans-unit>
+          <source>dotnet-build (.NET Core Tools RC4)</source>
+          <target state="translated">dotnet-build (.NET Core Tools RC4)</target>       </trans-unit>
         <trans-unit id="105" translate="yes" xml:space="preserve">
-          <source>This topic applies to Visual Studio 2017 RC - .NET Core Tools Preview 4.</source>
-          <target state="translated">このトピックは、Visual Studio 2017 RC - .NET Core Tools Preview 4 を対象としています。</target>       </trans-unit>
+          <source>This topic applies to .NET Core Tools RC4.</source>
+          <target state="translated">このトピックは .NET Core Tools RC4 を対象としています。</target>       </trans-unit>
         <trans-unit id="106" translate="yes" xml:space="preserve">
           <source>For the .NET Core Tools Preview 2 version, see the <bpt id="p1">[</bpt>dotnet-build<ept id="p1">](../../tools/dotnet-build.md)</ept> topic.</source>
           <target state="translated">.NET Core Tools Preview 2 バージョンについては、「<bpt id="p1">[</bpt>dotnet-build<ept id="p1">](../../tools/dotnet-build.md)</ept>」トピックを参照してください。</target>       </trans-unit>
