--- a/ol-archive/dotnet/docs.ja-jp/master/dotnet-core/dotnet-publish.fb8bc7a4fcfdbfa813a4cb6f6c5fc58b0192cf0f.ja-jp.xlf
+++ b/ol-archive/dotnet/docs.ja-jp/master/dotnet-core/dotnet-publish.fb8bc7a4fcfdbfa813a4cb6f6c5fc58b0192cf0f.ja-jp.xlf
@@ -2,13 +2,13 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="ja-jp">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-4a95368" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">f9fb64a90bdbd2096d4752279b1670fad8e8703f</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-f0362aa" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">1cf1611ab83874ad44855521d21040d102206338</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\tools\dotnet-publish.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">2f2e0ca87ff4d5cf23ed933c07c081fb07b52569</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">8b026711c21a04c6b1db3cbad3627ea035be37f7</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">d77d550e67c4802c079514a93f8d33751fdc1fba</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">34608a71f61fbe816b1e71b4a54fd0276dfec779</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
@@ -28,8 +28,8 @@
           <source>This topic applies to .NET Core Tools Preview 2.</source>
           <target state="translated">このトピックは .NET Core Tools Preview 2 を対象としています。</target>       </trans-unit>
         <trans-unit id="106" translate="yes" xml:space="preserve">
-          <source>For the  Visual Studio 2017 RC - .NET Core Tools Preview 4 version, see the <bpt id="p1">[</bpt>dotnet-publish (Tooling Preview 4)<ept id="p1">](../preview3/tools/dotnet-publish.md)</ept> topic.</source>
-          <target state="translated">Visual Studio 2017 RC - .NET Core Tools Preview 4 バージョンについては、「<bpt id="p1">[</bpt>dotnet-publish (Tooling Preview 4)<ept id="p1">](../preview3/tools/dotnet-publish.md)</ept>」トピックを参照してください。</target>       </trans-unit>
+          <source>For the .NET Core Tools RC4 version, see the <bpt id="p1">[</bpt>dotnet-publish (.NET Core Tools RC4)<ept id="p1">](../preview3/tools/dotnet-publish.md)</ept> topic.</source>
+          <target state="translated">.NET Core Tools RC4 バージョンについては、「<bpt id="p1">[</bpt>dotnet-publish (.NET Core Tools RC4)<ept id="p1">](../preview3/tools/dotnet-publish.md)</ept>」トピックを参照してください。</target>       </trans-unit>
         <trans-unit id="107" translate="yes" xml:space="preserve">
           <source>Name</source>
           <target state="translated">名前</target>       </trans-unit>
