--- a/ol-archive/dotnet/docs.ja-jp/master/dotnet-core/global-json.c6a5a164f40aa25301eee0114f5f18eb89ccd343.ja-jp.xlf
+++ b/ol-archive/dotnet/docs.ja-jp/master/dotnet-core/global-json.c6a5a164f40aa25301eee0114f5f18eb89ccd343.ja-jp.xlf
@@ -2,13 +2,13 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="ja-jp">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-4a95368" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">97a9ee85025c15e21d4a7cbdce31d35d3894e7d6</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-f0362aa" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">b814bfc79c2fcd0fd15b9494c18c6d0443a70fb1</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\preview3\tools\global-json.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">66aa560d3aab6f3d378786fee7af6502278cc189</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">79b94137aaaa6c0fcdc75da9e51a339695f0074c</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">2dd29fd87727def5256e4586153e506ae638de70</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">2589e1da6f1854861a01920f95bbb2a8df57d384</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
@@ -22,17 +22,17 @@
           <source>.NET, .NET Core</source>
           <target state="translated">.NET, .NET Core</target>       </trans-unit>
         <trans-unit id="104" translate="yes" xml:space="preserve">
-          <source>global.json reference (Tooling Preview 4)</source>
-          <target state="translated">global.json リファレンス (Tooling Preview 4)</target>       </trans-unit>
+          <source>global.json reference (.NET Core Tools RC4)</source>
+          <target state="translated">global.json リファレンス (.NET Core Tools RC4)</target>       </trans-unit>
         <trans-unit id="105" translate="yes" xml:space="preserve">
-          <source>This topic applies to Visual Studio 2017 RC - .NET Core Tools Preview 4.</source>
-          <target state="translated">このトピックは、Visual Studio 2017 RC - .NET Core Tools Preview 4 を対象としています。</target>       </trans-unit>
+          <source>This topic applies to .NET Core Tools RC4.</source>
+          <target state="translated">このトピックは .NET Core Tools RC4 を対象としています。</target>       </trans-unit>
         <trans-unit id="106" translate="yes" xml:space="preserve">
           <source>For the .NET Core Tools Preview 2 version, see the <bpt id="p1">[</bpt>global.json reference<ept id="p1">](../../tools/global-json.md)</ept> topic.</source>
           <target state="translated">.NET Core Tools Preview 2 バージョンについては、「<bpt id="p1">[</bpt>global.json リファレンス<ept id="p1">](../../tools/global-json.md)</ept>」トピック参照してください。</target>       </trans-unit>
         <trans-unit id="107" translate="yes" xml:space="preserve">
-          <source>The global.json file is still present in the .NET Core Command Line Preview 4.</source>
-          <target state="translated">global.json ファイルは、.NET Core コマンド ラインの Preview 4 に引き続き存在します。</target>       </trans-unit>
+          <source>The global.json file is still present in the .NET Core Command Line RC4.</source>
+          <target state="translated">global.json ファイルは、.NET Core コマンド ラインの RC4 に引き続き存在します。</target>       </trans-unit>
         <trans-unit id="108" translate="yes" xml:space="preserve">
           <source>However, its main purpose is not to define solution metadata as in previous releases, but to allow selection of the CLI version being used through the <ph id="ph1">`sdk`</ph> property.</source>
           <target state="translated">ただし、その主な目的は以前のリリースのようにソリューションのメタデータを定義することではなく、<ph id="ph1">`sdk`</ph> プロパティによって使用されている CLI バージョンを選択できるようにすることです。</target>       </trans-unit>
