--- a/ol-archive/dotnet/docs.ja-jp/master/dotnet-core/index.45f09914ce24fbe54b00b2ed7526b685e50e37e2.ja-jp.xlf
+++ b/ol-archive/dotnet/docs.ja-jp/master/dotnet-core/index.45f09914ce24fbe54b00b2ed7526b685e50e37e2.ja-jp.xlf
@@ -2,13 +2,13 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="ja-jp">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-4a95368" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">524504bd05fd15bdd6afd686c9e5d8edd1c4cc0f</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-f0362aa" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">bcb9e39ed400ad93ae9b38890caa6c579f4a1594</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\preview3\tools\index.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">5cc93c970688532570dc2713337857b8fd6ae265</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">687ee356a65df4267bec26367134911ef670ea96</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">1909fa75ef818df10f444dff9609e5869c5b4a91</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">43c239948ed061f28d6745595f78cb5f245b2b10</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
@@ -22,11 +22,11 @@
           <source>CLI, CLI tools, .NET, .NET Core</source>
           <target state="translated">CLI, CLI ツール, .NET, .NET Core</target>       </trans-unit>
         <trans-unit id="104" translate="yes" xml:space="preserve">
-          <source>.NET Core command-line interface tools (Tooling Preview 4)</source>
-          <target state="translated">.NET Core コマンド ライン インターフェイス ツール (Tooling Preview 4)</target>       </trans-unit>
+          <source>.NET Core command-line interface tools (.NET Core Tools RC4)</source>
+          <target state="translated">.NET Core コマンドライン インターフェイス ツール (.NET Core Tools RC4)</target>       </trans-unit>
         <trans-unit id="105" translate="yes" xml:space="preserve">
-          <source>This topic applies to Visual Studio 2017 RC - .NET Core Tools Preview 4.</source>
-          <target state="translated">このトピックは、Visual Studio 2017 RC - .NET Core Tools Preview 4 を対象としています。</target>       </trans-unit>
+          <source>This topic applies to .NET Core Tools RC4.</source>
+          <target state="translated">このトピックは .NET Core Tools RC4 を対象としています。</target>       </trans-unit>
         <trans-unit id="106" translate="yes" xml:space="preserve">
           <source>For the .NET Core Tools Preview 2 version, see the <bpt id="p1">[</bpt>.NET Core command-line interface tools<ept id="p1">](../../tools/index.md)</ept> topic.</source>
           <target state="translated">.NET Core Tools Preview 2 バージョンについては、「<bpt id="p1">[</bpt>.NET Core コマンド ライン インターフェイス ツール<ept id="p1">](../../tools/index.md)</ept>」トピックを参照してください。</target>       </trans-unit>
@@ -235,8 +235,8 @@
           <source>You can learn more about both of these in the <bpt id="p1">[</bpt>.NET Core application deployment<ept id="p1">](../deploying/index.md)</ept> topic.</source>
           <target state="translated">これらの両方の方法の詳細については、<bpt id="p1">[</bpt>.NET Core アプリケーション展開<ept id="p1">](../deploying/index.md)</ept>に関するトピックを参照してください。</target>       </trans-unit>
         <trans-unit id="175" translate="yes" xml:space="preserve">
-          <source>Migration from Preview 4/project.json</source>
-          <target state="translated">Preview 4/project.json からの移行</target>       </trans-unit>
+          <source>Migration from RC4/project.json</source>
+          <target state="translated">RC4/project.json からの移行</target>       </trans-unit>
         <trans-unit id="176" translate="yes" xml:space="preserve">
           <source>If you used Preview 2 tooling and project.json projects, you can consult the <bpt id="p1">[</bpt>dotnet migrate<ept id="p1">](dotnet-migrate.md)</ept> command docs to get acquainted with the command and how to migrate your project.</source>
           <target state="translated">Preview 2 ツールおよび project.json プロジェクトを使用していた場合、コマンドの詳細およびプロジェクトの移行方法については、<bpt id="p1">[</bpt>dotnet migrate<ept id="p1">](dotnet-migrate.md)</ept> コマンドのドキュメントを参照してください。</target>       </trans-unit>
