--- a/ol-archive/dotnet/docs.ja-jp/master/dotnet-core/global-json.bcf96f7f0bed50cf3a64cde9a9077d38563d8cfa.ja-jp.xlf
+++ b/ol-archive/dotnet/docs.ja-jp/master/dotnet-core/global-json.bcf96f7f0bed50cf3a64cde9a9077d38563d8cfa.ja-jp.xlf
@@ -2,13 +2,13 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="ja-jp">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-4a95368" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">e8c8123f2c46e506990375172d1be642653d4996</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-f0362aa" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">a6b0ad546a8a121ad5ea4642c11842a8dccf7055</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\tools\global-json.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">3ad8e58f24a35aa1a1d11dea1da26fb6c923e316</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">6089bcb47b4b29fcd0719eb451916d326958e30d</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">96cc45597f72cf1c80da54cbb605842cd957e1eb</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">2a8f2174aab354934a5b95c2ff83f1b9e433f436</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
@@ -28,8 +28,8 @@
           <source>This topic applies to .NET Core Tools Preview 2.</source>
           <target state="translated">このトピックは .NET Core Tools Preview 2 を対象としています。</target>       </trans-unit>
         <trans-unit id="106" translate="yes" xml:space="preserve">
-          <source>For the  Visual Studio 2017 RC - .NET Core Tools Preview 4 version, see the <bpt id="p1">[</bpt>global.json reference (Tooling Preview 4)<ept id="p1">](../preview3/tools/global-json.md)</ept> topic.</source>
-          <target state="translated">Visual Studio 2017 RC - .NET Core Tools Preview 4 バージョンについては、「<bpt id="p1">[</bpt>global.json リファレンス (Tooling Preview 4)<ept id="p1">](../preview3/tools/global-json.md)</ept>」トピックを参照してください。</target>       </trans-unit>
+          <source>For the .NET Core Tools RC4 version, see the <bpt id="p1">[</bpt>global.json reference (.NET Core Tools RC4)<ept id="p1">](../preview3/tools/global-json.md)</ept> topic.</source>
+          <target state="translated">.NET Core Tools RC4 バージョンについては、「<bpt id="p1">[</bpt>global.json リファレンス (.NET Core Tools RC4)<ept id="p1">](../preview3/tools/global-json.md)</ept>」トピックを参照してください。</target>       </trans-unit>
         <trans-unit id="107" translate="yes" xml:space="preserve">
           <source>The global.json file is used on .NET Core projects to define the solution metadata.</source>
           <target state="translated">global.json ファイルは、.NET Core プロジェクトでソリューション メタデータの定義に使用されます。</target>       </trans-unit>
