--- a/ol-archive/dotnet/docs.ja-jp/master/dotnet-core/windows-prerequisites.a7830d3b1f17dee983c6f15f1cb5d0a715a52ce3.ja-jp.xlf
+++ b/ol-archive/dotnet/docs.ja-jp/master/dotnet-core/windows-prerequisites.a7830d3b1f17dee983c6f15f1cb5d0a715a52ce3.ja-jp.xlf
@@ -2,19 +2,19 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="ja-jp">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-4a95368" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">9db748afaabdce140c70a543fcb7f19c487b523f</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-f0362aa" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">8e04d241a8f99e42bb6bae3e7324f2698905c22a</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\preview3\windows-prerequisites.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">d5350ba38d421a48e668b52213fe5bfc0fb6891a</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">ec7a43883e448fda6fe91088e09b33a7c804c409</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">c343fc4f0e3cad29fc01d347dd691d5d1a87e55f</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">a03ad3393ca820b0f12215f226e66dccb75d30a3</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
         <trans-unit id="101" translate="yes" xml:space="preserve">
-          <source>Prerequisites for .NET Core on Windows (Tooling Preview 4)</source>
-          <target state="translated">Windows における .NET Core の前提条件 (Tooling Preview 4)</target>       </trans-unit>
+          <source>Prerequisites for .NET Core on Windows (.NET Core Tools RC4)</source>
+          <target state="translated">Windows における .NET Core の前提条件 (.NET Core Tools RC4)</target>       </trans-unit>
         <trans-unit id="102" translate="yes" xml:space="preserve">
           <source>Content moved!</source>
           <target state="translated">このコンテンツは移動しました。</target>       </trans-unit>
