open localization: update handback repo

--- a/ol-archive/dotnet/docs.ko-kr/master/dotnet-core/dotnet-migrate.d9476f7aea9d488b184aabc928b47621ce21ad65.ko-kr.xlf
+++ b/ol-archive/dotnet/docs.ko-kr/master/dotnet-core/dotnet-migrate.d9476f7aea9d488b184aabc928b47621ce21ad65.ko-kr.xlf
@@ -128,7 +128,7 @@
           <target state="translated"><ph id="ph1">`global.json`</ph> 파일에서 가리키는 프로젝트를 모두 마이그레이션합니다.</target>       </trans-unit>
         <trans-unit id="139" translate="yes" xml:space="preserve">
           <source>Migrate only the current project and no project to project dependencies and use a specific SDK version:</source>
-          <target state="translated">현재 프로젝트만 프로젝트 종속성으로 마이그레이션하고 특정 SDK 버전을 사용합니다.</target>       </trans-unit>
+          <target state="translated">현재 프로젝트만 마이그레이션하고 프로젝트 간 종속성은 마이그레이션하지 않으며, 특정 SDK 버전을 사용합니다.</target>       </trans-unit>
       </group>
     </body>
   </file>
