open localization: update handback repo

--- a/ol-archive/dotnet/docs.de-de/master/dotnet-core/dotnet-msbuild.a097ae8f8b5452c025f0a38a01915f7a8f0792d4.de-de.xlf
+++ b/ol-archive/dotnet/docs.de-de/master/dotnet-core/dotnet-msbuild.a097ae8f8b5452c025f0a38a01915f7a8f0792d4.de-de.xlf
@@ -2,22 +2,22 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="de-de">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-188fee3" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">2d024911ae3c24b5e48889dc0b4777cff08643de</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-4a95368" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">06d4210e5dff97d3e96efff8ae8e84efc27fb7d2</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\preview3\tools\dotnet-msbuild.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">308bcd8f50d0ae60544c880f8a1e1849103023d4</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">c3e0abdbe57ffda4410007ad8e320438233a9c07</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">63fefad2840536307bc5e09300ac2182515ab2cc</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">f58c1f9ea38e44e21509e5b230c4fa6953da4106</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
         <trans-unit id="101" translate="yes" xml:space="preserve">
-          <source>dotnet-msbuild command | .NET Core SDK</source>
-          <target state="translated">dotnet-msbuild-Befehl | .NET Core SDK</target>       </trans-unit>
+          <source>dotnet-msbuild command | Microsoft Docs</source>
+          <target state="translated">Befehl dotnet-msbuild | Microsoft-Dokumentation</target>       </trans-unit>
         <trans-unit id="102" translate="yes" xml:space="preserve">
-          <source>The dotnet-msmsbuild command provides access to MSmsbuild command line</source>
-          <target state="translated">Der dotnet-msmsbuild-Befehl ermöglicht den Zugriff auf die MSmsbuild-Befehlszeile</target>       </trans-unit>
+          <source>The dotnet-msbuild command provides access to the MSBuild command line.</source>
+          <target state="translated">Der Befehl dotnet-msbuild ermöglicht den Zugriff auf die MSBuild-Befehlszeile.</target>       </trans-unit>
         <trans-unit id="103" translate="yes" xml:space="preserve">
           <source>dotnet-msmsbuild, CLI, CLI command, .NET Core</source>
           <target state="translated">dotnet-msmsbuild, CLI, CLI-Befehl, .NET Core</target>       </trans-unit>
@@ -28,8 +28,8 @@
           <source>Name</source>
           <target state="translated">Name</target>       </trans-unit>
         <trans-unit id="106" translate="yes" xml:space="preserve">
-          <source>dotnet-msbuild -- Builds a project and all of its dependencies</source>
-          <target state="translated">dotnet-msbuild – Erstellt ein Projekt und alle seine Abhängigkeiten</target>       </trans-unit>
+          <source>dotnet-msbuild -- Builds a project and all of its dependencies.</source>
+          <target state="translated">dotnet-msbuild: Erstellt ein Projekt und alle seine Abhängigkeiten</target>       </trans-unit>
         <trans-unit id="107" translate="yes" xml:space="preserve">
           <source>Synopsis</source>
           <target state="translated">Übersicht</target>       </trans-unit>
