open localization: update handback repo

--- a/ol-archive/dotnet/docs.ru-ru/master/dotnet-core/index.e290000c29850e3aea16828e0cef48f5e6ff9019.ru-ru.xlf
+++ b/ol-archive/dotnet/docs.ru-ru/master/dotnet-core/index.e290000c29850e3aea16828e0cef48f5e6ff9019.ru-ru.xlf
@@ -74,7 +74,7 @@
           <target state="translated">.NET Core состоит из перечисленных ниже компонентов.</target>       </trans-unit>
         <trans-unit id="121" translate="yes" xml:space="preserve">
           <source>A <bpt id="p1">[</bpt>.NET runtime<ept id="p1">](https://github.com/dotnet/coreclr)</ept>, which provides a type system, assembly loading, a garbage collector, native interop and other basic services.</source>
-          <target state="translated"><bpt id="p1">[</bpt>Среда выполнения .NET<ept id="p1">](https://github.com/dotnet/coreclr)</ept> предоставляет систему типов, функцию загрузки сборок, сборщик мусора, взаимодействие с машинным кордом и другие основные службы.</target>       </trans-unit>
+          <target state="translated"><bpt id="p1">[</bpt>Среда выполнения .NET<ept id="p1">](https://github.com/dotnet/coreclr)</ept> предоставляет систему типов, функцию загрузки сборок, сборщик мусора, взаимодействие с машинным кодом и другие основные службы.</target>       </trans-unit>
         <trans-unit id="122" translate="yes" xml:space="preserve">
           <source>A set of <bpt id="p1">[</bpt>framework libraries<ept id="p1">](https://github.com/dotnet/corefx)</ept>, which provide primitive data types, app composition types and fundamental utilities.</source>
           <target state="translated">Набор <bpt id="p1">[</bpt>библиотек платформы<ept id="p1">](https://github.com/dotnet/corefx)</ept> предоставляет примитивные типы данных, типы компоновки приложений и базовые служебные программы.</target>       </trans-unit>
